Se añaden imágenes para práctica 3

--- a/HTML5/holamundo.html
+++ b/HTML5/holamundo.html
@@ -4,7 +4,9 @@
     <title>Just a Test</title>
   </head>
   <body>
-   <h1>Hola Mundo!</h1>
-   <p>Esto es el hola mundo para el ejercicio 2 de la práctica</p>
+    <h1>Hola Mundo!</h1>
+    <p>Esto es el hola mundo para el ejercicio 2 de la práctica</p>
+    <img src="/images/programming.jpeg" width="1200px" height="900px"/>
+    <img src="/images/html.jpeg" width="80%" height="auto"/>
   </body>
 </html>
