Finalizada la maquetación responsive de la Web.

--- a/PRACTICA1/index.html
+++ b/PRACTICA1/index.html
@@ -29,9 +29,11 @@
         <a class="register" href="#">Registrar comisario</a>
     </section>
     <nav class="nav-bar">
-        <a class="white-link" href="fotografia.html">Fotografía</a>
-        <a class="white-link" href="pintura.html">Pintura</a>
-        <a class="white-link" href="escultura.html">Escultura</a>
+        <section class="section-expo-types">
+            <a class="white-link" href="fotografia.html">Fotografía</a>
+            <a class="white-link" href="pintura.html">Pintura</a>
+            <a class="white-link" href="escultura.html">Escultura</a>
+        </section>
     </nav>
 </header>
 
