--- a/PRACTICA1/exposiciones/acuarela/acuarela.html
+++ b/PRACTICA1/exposiciones/acuarela/acuarela.html
@@ -41,7 +41,7 @@
 </header>
 
 <main class="page-expo">
-    <section class="expo-info">
+    <section class="expo-img">
         <img
                 class="img"
                 src="../../images/exposiciones/acuarela/acuarela.jpg"
@@ -49,6 +49,8 @@
                 height="270"
                 alt="Acuarela"
         >
+    </section>
+    <section class="expo-info">
         <h1>Acuarela</h1>
         <h3>Mario Gámiz Vargas</h3>
         <p>Disponible desde el 13 de Septiembre de 2022</p>
