Completando zona de registros.

--- a/PRACTICA1/alta_success.html
+++ b/PRACTICA1/alta_success.html
@@ -68,6 +68,9 @@
         </ul>
     </aside>
     <section class="main-content">
+        <section class="signup-success">
+            <h4>El registro se ha realizado con éxito</h4>
+        </section>
         <h2>Exposiciones</h2>
         <section class="container-expos">
             <article class="expo">
