--- a/PRACTICA1/exposiciones/acuarela/obras/la_granja.html
+++ b/PRACTICA1/exposiciones/acuarela/obras/la_granja.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Centro de Exposiciones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../assets/css/style-body.css">
+    <link rel="stylesheet" href="../../../assets/css/style-main.css">
     <link rel="stylesheet" href="../../../assets/css/style-header.css">
     <link rel="stylesheet" href="../../../assets/css/style-footer.css">
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
@@ -25,8 +25,8 @@
             <input type="password" placeholder="Contraseña..." name="password" required>
             <button type="submit">Iniciar sesión</button>
         </form>
-        <a class="register" href="#">Registrarse</a>
-        <a class="register" href="#">Registrar comisario</a>
+        <a class="register" href="../../../altapublico.html">Registrarse</a>
+        <a class="register" href="../../../altacomisario.html">Registrar comisario</a>
     </section>
     <nav class="nav-bar">
         <section class="section-expo-types">
