--- a/PRACTICA1/alta_success.html
+++ b/PRACTICA1/alta_success.html
@@ -30,9 +30,9 @@
     </section>
     <nav class="nav-bar">
         <section class="section-expo-types">
-            <a class="white-link" href="fotografia.html">Fotografía</a>
-            <a class="white-link" href="pintura.html">Pintura</a>
-            <a class="white-link" href="escultura.html">Escultura</a>
+            <a class="white-link" href="categorias/fotografia.html">Fotografía</a>
+            <a class="white-link" href="categorias/pintura.html">Pintura</a>
+            <a class="white-link" href="categorias/escultura.html">Escultura</a>
         </section>
     </nav>
 </header>
