--- a/PRACTICA1/altapublico.html
+++ b/PRACTICA1/altapublico.html
@@ -29,9 +29,9 @@
     </section>
     <nav class="nav-bar">
         <section class="section-expo-types">
-            <a class="white-link" href="fotografia.html">Fotografía</a>
-            <a class="white-link" href="pintura.html">Pintura</a>
-            <a class="white-link" href="escultura.html">Escultura</a>
+            <a class="white-link" href="categorias/fotografia.html">Fotografía</a>
+            <a class="white-link" href="categorias/pintura.html">Pintura</a>
+            <a class="white-link" href="categorias/escultura.html">Escultura</a>
         </section>
         <section class="section-navigation">
             <a class="white-link" href="index.html">Home</a>
