--- a/PRACTICA1/exposiciones/educarte/educarte.html
+++ b/PRACTICA1/exposiciones/educarte/educarte.html
@@ -32,9 +32,9 @@
 </header>
 
 <nav>
-    <a class="white-link" href="../../fotografia.html">Fotografía</a>
-    <a class="white-link" href="../../pintura.html">Pintura</a>
-    <a class="white-link" href="../../escultura.html">Escultura</a>
+    <a class="white-link" href="../../categorias/fotografia.html">Fotografía</a>
+    <a class="white-link" href="../../categorias/pintura.html">Pintura</a>
+    <a class="white-link" href="../../categorias/escultura.html">Escultura</a>
 </nav>
 
 <main>
