Finalización de exposicones.

--- a/PRACTICA1/alta_success.html
+++ b/PRACTICA1/alta_success.html
@@ -79,7 +79,7 @@
                     <img src="images/exposiciones/educarte/educarte.jpg" width="200" height="110" alt="EduCarte">
                 </a>
                 <a href="exposiciones/educarte/educarte.html">
-                    <h3>EduCarte</h3>
+                    <h3>EducArte</h3>
                 </a>
                 <p>Javier García Cobos</p>
                 <p>Fecha: 2 de Abril de 2022</p>
