--- a/PRACTICA1/exposiciones/educarte/obras/jovenes_bebiendo.html
+++ b/PRACTICA1/exposiciones/educarte/obras/jovenes_bebiendo.html
@@ -36,7 +36,7 @@
         </section>
         <section class="section-navigation">
             <a class="white-link" href="../../../index.html">Home</a>
-            <a class="white-link" href="../../../exposiciones/belleza_oculta/belleza_oculta.html">Belleza Oculta</a>
+            <a class="white-link" href="../../../exposiciones/educarte/educarte.html">EducArte</a>
         </section>
     </nav>
 </header>
@@ -45,22 +45,16 @@
     <section class="section-info-obra">
         <img
                 class="img"
-                src="../../../images/exposiciones/belleza_oculta/obras/loba_capitolina.webp"
-                width="550" height="354" alt="Loba capitolina"
+                src="../../../images/exposiciones/educarte/obras/jovenes_bebiendo.jpg"
+                width="550" height="314" alt="Jóvenes Bebiendo"
         >
-        <h1>Loba capitolina</h1>
-        <h3>Por Alberto Toro Gutierrez</h3>
+        <h1>Jóvenes Bebiendo</h1>
+        <h3>Por Javier García Cobos</h3>
         <p class="obra-description">
-            La Loba Capitolina, Luperca, es una figura clave en la historia de Roma. Según la mitología, una loba
-            encontró a dos gemelos, Rómulo y Remo, a orillas del río Tíber. La criatura, contrariamente a su
-            instinto carnívoro, amamantó y crio a los dos niños que acabarían fundando la ciudad de Roma en la
-            colina del Palatino.
-            Desde los inicios de Roma, la Loba Capitolina fue un poderoso símbolo de la ciudad.
-            Puede que incluso antes de la propia Roma, pues se cree que esta simbología podría ser de
-            origen etrusco. Como la escultura más representativa de Luperca amamantando a Rómulo y Remo
-            conservada en los Museos Capitolinos. De la cual tenemos una pequeña réplica en la Plaza del
-            Campidoglio, en la cima de Roma vigilando lo que han sido capaces de crear sus cachorros.
-        </p>
+            Se dice que uno de los "problemas" de la sociedad es la organización del botellón todos los fines de
+            semana. En realidad, el problema en sí no está en que se organice, sino en las secuelas que
+            éste deja en las zonas donde tiene lugar, y las molestias que causan a los vecinos,
+            entre otras cosas, los conflictos y peleas que pueden llegar a surgir si se abusa del alcohol.        </p>
     </section>
 </main>
 
