--- a/PRACTICA1/exposiciones/belleza_oculta/belleza_oculta.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/belleza_oculta.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <title>Centro de Exposiciones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style-main.css">
+    <link rel="stylesheet" href="../../assets/css/style-header.css">
+    <link rel="stylesheet" href="../../assets/css/style-footer.css">
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
 </head>
 
 <body>
 <header>
-    <div class="nav-brand">
+    <section class="header-brand">
         <!--suppress CheckImageSize -->
         <img src="../../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
-    </div>
-    <div class="nav-bar">
-        <a class="nav-bar-home" href="../../index.html">Inicio</a>
-    </div>
-    <div class="nav-bar">
+    </section>
+    <section class="header-users">
         <form class="login-form" action="#" method="post">
             <!--suppress HtmlFormInputWithoutLabel -->
             <input type="text" placeholder="Usuario..." name="username" required>
@@ -26,114 +25,113 @@
             <input type="password" placeholder="Contraseña..." name="password" required>
             <button type="submit">Iniciar sesión</button>
         </form>
-        <a class="register" href="#">Registrarse</a>
-        <a class="register" href="#">Registrar comisario</a>
-    </div>
+        <a class="register" href="../../altapublico.html">Registrarse</a>
+        <a class="register" href="../../altacomisario.html">Registrar comisario</a>
+    </section>
+    <nav class="nav-bar">
+        <section class="section-expo-types">
+            <a class="white-link" href="../../categorias/fotografia.html">Fotografía</a>
+            <a class="white-link" href="../../categorias/pintura.html">Pintura</a>
+            <a class="white-link" href="../../categorias/escultura.html">Escultura</a>
+        </section>
+        <section class="section-navigation">
+            <a class="white-link" href="../../index.html">Home</a>
+        </section>
+    </nav>
 </header>
 
-<nav>
-    <a class="white-link" href="../../categorias/fotografia.html">Fotografía</a>
-    <a class="white-link" href="../../categorias/pintura.html">Pintura</a>
-    <a class="white-link" href="../../categorias/escultura.html">Escultura</a>
-</nav>
-
-<main>
-    <section class="row expo-info">
-        <div class="col">
-            <img
-                    class="img"
-                    src="../../images/exposiciones/belleza_oculta/futura-expo.jpg"
-                    width="400"
-                    height="270"
-                    alt="Belleza Oculta"
-            >
-        </div>
-        <div class="col">
-            <h1>Belleza Oculta</h1>
-            <h3>Alberto Toro Gutierrez</h3>
-            <p>Disponible desde el 27 de Junio de 2022</p>
-            <h4>Sala 04A</h4>
-            <p>
-                El sentido de la escultura ofrece un recorrido por la práctica escultórica moderna y contemporánea
-                desde una perspectiva asincrónica y heterogénea que incluye también obras antiguas y objetos sin
-                autoría.
-                La muestra parte de la ambición de la escultura del siglo xx de ir más allá de la representación y
-                la generación de imágenes y también quiere explicar la gran transformación de esta disciplina a lo
-                largo del siglo xxi, con la aplicación de nuevas técnicas y la aparición de nuevos imaginarios y
-                sensibilidades.
-            </p>
-        </div>
+<main class="page-expo">
+    <section class="expo-img">
+        <img
+                class="img"
+                src="../../images/exposiciones/belleza_oculta/futura-expo.jpg"
+                width="400"
+                height="270"
+                alt="Belleza Oculta"
+        >
+    </section>
+    <section class="expo-info">
+        <h1>Belleza Oculta</h1>
+        <h3>Alberto Toro Gutierrez</h3>
+        <p>Disponible desde el 27 de Junio de 2022</p>
+        <h4>Sala 04A</h4>
+        <p class="expo-info-description">
+            El sentido de la escultura ofrece un recorrido por la práctica escultórica moderna y contemporánea
+            desde una perspectiva asincrónica y heterogénea que incluye también obras antiguas y objetos sin
+            autoría.
+            La muestra parte de la ambición de la escultura del siglo xx de ir más allá de la representación y
+            la generación de imágenes y también quiere explicar la gran transformación de esta disciplina a lo
+            largo del siglo xxi, con la aplicación de nuevas técnicas y la aparición de nuevos imaginarios y
+            sensibilidades.
+        </p>
     </section>
     <section class="obras">
         <fieldset>
             <legend>OBRAS</legend>
-            <div class="row">
-                <article>
-                    <a href="obras/loba_capitolina.html">
-                        <!--suppress CheckImageSize -->
-                        <img
-                                class="img"
-                                src="../../images/exposiciones/belleza_oculta/obras/loba_capitolina.webp"
-                                alt="El Pósito" width="230" height="180"
-                        >
-                        <h3>Loba capitolina</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="obras/victoria_alada.html">
-                        <!--suppress CheckImageSize -->
-                        <img
-                                class="img"
-                                src="../../images/exposiciones/belleza_oculta/obras/victoria_alada.webp"
-                                alt="El Pósito" width="230" height="190"
-                        >
-                        <h3>Victoria alada de Samotracia</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="obras/formas_unicas.html">
-                        <!--suppress CheckImageSize -->
-                        <img
-                                class="img"
-                                src="../../images/exposiciones/belleza_oculta/obras/formas_unicas.jpg"
-                                alt="El Pósito" width="210" height="250"
-                        >
-                        <h3>Formas Únicas de Continuidad</h3>
-                    </a>
-                </article>
-            </div>
-            <div class="row">
-                <article>
-                    <a href="obras/balloon_dog.html">
-                        <!--suppress CheckImageSize -->
-                        <img
-                                class="img"
-                                src="../../images/exposiciones/belleza_oculta/obras/balloon_dog.jpg"
-                                alt="El Pósito" width="250" height="190"
-                        >
-                        <h3>Balloon Dog</h3>
-                    </a>
-                </article>
-            </div>
+            <article>
+                <a href="obras/loba_capitolina.html">
+                    <!--suppress CheckImageSize -->
+                    <img
+                            class="img"
+                            src="../../images/exposiciones/belleza_oculta/obras/loba_capitolina.webp"
+                            alt="El Pósito" width="230" height="180"
+                    >
+                    <h3>Loba capitolina</h3>
+                </a>
+            </article>
+            <article>
+                <a href="obras/victoria_alada.html">
+                    <!--suppress CheckImageSize -->
+                    <img
+                            class="img"
+                            src="../../images/exposiciones/belleza_oculta/obras/victoria_alada.webp"
+                            alt="El Pósito" width="230" height="190"
+                    >
+                    <h3>Victoria alada de Samotracia</h3>
+                </a>
+            </article>
+            <article>
+                <a href="obras/formas_unicas.html">
+                    <!--suppress CheckImageSize -->
+                    <img
+                            class="img"
+                            src="../../images/exposiciones/belleza_oculta/obras/formas_unicas.jpg"
+                            alt="El Pósito" width="210" height="250"
+                    >
+                    <h3>Formas Únicas de Continuidad</h3>
+                </a>
+            </article>
+            <article>
+                <a href="obras/balloon_dog.html">
+                    <!--suppress CheckImageSize -->
+                    <img
+                            class="img"
+                            src="../../images/exposiciones/belleza_oculta/obras/balloon_dog.jpg"
+                            alt="El Pósito" width="250" height="190"
+                    >
+                    <h3>Balloon Dog</h3>
+                </a>
+            </article>
         </fieldset>
     </section>
 </main>
+
 <footer>
-    <div>
+    <section>
         <h4>Contacta</h4>
         <p>684144382</p>
         <h4>Ubicación</h4>
         <p>C/ Cuesta de las Monjas N13</p>
-    </div>
-    <div>
+    </section>
+    <section>
         <p><a href="../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
         <p><a href="../../doc/documentacion.pdf">Como se hizo...</a></p>
-    </div>
-    <div>
+    </section>
+    <section>
         <h3>GRACIAS</h3>
         <h3>POR SU</h3>
         <h3>VISITA</h3>
-    </div>
+    </section>
 </footer>
 </body>
 </html>
