--- a/PRACTICA1/exposiciones/educarte/educarte.html
+++ b/PRACTICA1/exposiciones/educarte/educarte.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <title>Centro de Exposiciones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style-main.css">
+    <link rel="stylesheet" href="../../assets/css/style-header.css">
+    <link rel="stylesheet" href="../../assets/css/style-footer.css">
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
 </head>
 
 <body>
 <header>
-    <div class="nav-brand">
+    <section class="header-brand">
         <!--suppress CheckImageSize -->
         <img src="../../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
-    </div>
-    <div class="nav-bar">
-        <a class="nav-bar-home" href="../../index.html">Inicio</a>
-    </div>
-    <div class="nav-bar">
+    </section>
+    <section class="header-users">
         <form class="login-form" action="#" method="post">
             <!--suppress HtmlFormInputWithoutLabel -->
             <input type="text" placeholder="Usuario..." name="username" required>
@@ -26,88 +25,89 @@
             <input type="password" placeholder="Contraseña..." name="password" required>
             <button type="submit">Iniciar sesión</button>
         </form>
-        <a class="register" href="#">Registrarse</a>
-        <a class="register" href="#">Registrar comisario</a>
-    </div>
+        <a class="register" href="../../altapublico.html">Registrarse</a>
+        <a class="register" href="../../altacomisario.html">Registrar comisario</a>
+    </section>
+    <nav class="nav-bar">
+        <section class="section-expo-types">
+            <a class="white-link" href="../../categorias/fotografia.html">Fotografía</a>
+            <a class="white-link" href="../../categorias/pintura.html">Pintura</a>
+            <a class="white-link" href="../../categorias/escultura.html">Escultura</a>
+        </section>
+        <section class="section-navigation">
+            <a class="white-link" href="../../index.html">Home</a>
+        </section>
+    </nav>
 </header>
 
-<nav>
-    <a class="white-link" href="../../categorias/fotografia.html">Fotografía</a>
-    <a class="white-link" href="../../categorias/pintura.html">Pintura</a>
-    <a class="white-link" href="../../categorias/escultura.html">Escultura</a>
-</nav>
-
-<main>
-    <section class="row expo-info">
-        <div class="col">
-            <img
-                    class="img"
-                    src="../../images/exposiciones/educarte/educarte.jpg"
-                    width="400"
-                    height="270"
-                    alt="Belleza Oculta"
-            >
-        </div>
-        <div class="col">
-            <h1>EduCarte</h1>
-            <h3>Javier García Cobos</h3>
-            <p>Disponible desde el 2 de Abril de 2022</p>
-            <h4>Sala 01</h4>
-            <p>
-                Javier García Cobos organiza una exposición especial para celebrar su 15º aniversario con 15 de
-                las fotografías más importantes de 15 de sus artistas más icónicos. La muestra recoge obras de
-                los autores: Carlos Pérez Siquier, Castro Prieto, Cecilia Paredes, Flor Garduño, Isabel Muñoz,
-                Jerry Uelsmann, Jürgen Schadeberg, Martín Chambi, Luis González Palma, Ortiz Echagüe,
-                Ouka Leele, Ramón Masats, Ricard Terré, Soledad Córdoba y Toni Catany.
-            </p>
-        </div>
+<main class="page-expo">
+    <section class="expo-img">
+        <img
+                class="img"
+                src="../../images/exposiciones/educarte/educarte.jpg"
+                width="400"
+                height="270"
+                alt="Belleza Oculta"
+        >
+    </section>
+    <section class="expo-info">
+        <h1>EducArte</h1>
+        <h3>Javier García Cobos</h3>
+        <p>Disponible desde el 2 de Abril de 2022</p>
+        <h4>Sala 01</h4>
+        <p class="expo-info-description">
+            Javier García Cobos organiza una exposición especial para celebrar su 15º aniversario con 15 de
+            las fotografías más importantes de 15 de sus artistas más icónicos. La muestra recoge obras de
+            los autores: Carlos Pérez Siquier, Castro Prieto, Cecilia Paredes, Flor Garduño, Isabel Muñoz,
+            Jerry Uelsmann, Jürgen Schadeberg, Martín Chambi, Luis González Palma, Ortiz Echagüe,
+            Ouka Leele, Ramón Masats, Ricard Terré, Soledad Córdoba y Toni Catany.
+        </p>
     </section>
     <section class="obras">
         <fieldset>
             <legend>OBRAS</legend>
-            <div class="row">
-                <article>
-                    <a href="obras/jovenes_bebiendo.html">
-                        <!--suppress CheckImageSize -->
-                        <img
-                                class="img"
-                                src="../../images/exposiciones/educarte/obras/jovenes_bebiendo.jpg"
-                                alt="El Pósito" width="290" height="180"
-                        >
-                        <h3>Jóvenes bebiendo</h3>
-                    </a>
-                </article>
-                <article>
-                    <a href="obras/jovenes_bebiendo.html">
-                        <!--suppress CheckImageSize -->
-                        <img
-                                class="img"
-                                src="../../images/exposiciones/educarte/obras/jovenes_humanitarios.jpeg"
-                                alt="El Pósito" width="290" height="180"
-                        >
-                        <h3>Unidad</h3>
-                    </a>
-                </article>
-            </div>
+            <article>
+                <a href="obras/jovenes_bebiendo.html">
+                    <!--suppress CheckImageSize -->
+                    <img
+                            class="img"
+                            src="../../images/exposiciones/educarte/obras/jovenes_bebiendo.jpg"
+                            alt="El Pósito" width="290" height="180"
+                    >
+                    <h3>Jóvenes bebiendo</h3>
+                </a>
+            </article>
+            <article>
+                <a href="obras/unidad.html">
+                    <!--suppress CheckImageSize -->
+                    <img
+                            class="img"
+                            src="../../images/exposiciones/educarte/obras/unidad.jpeg"
+                            alt="El Pósito" width="290" height="180"
+                    >
+                    <h3>Unidad</h3>
+                </a>
+            </article>
         </fieldset>
     </section>
 </main>
+
 <footer>
-    <div>
+    <section>
         <h4>Contacta</h4>
         <p>684144382</p>
         <h4>Ubicación</h4>
         <p>C/ Cuesta de las Monjas N13</p>
-    </div>
-    <div>
-        <p><a href="../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../doc/documentacion.pdf">Como se hizo...</a></p>
-    </div>
-    <div>
+    </section>
+    <section>
+        <p><a href="../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
+        <p><a href="../../doc/documentacion.pdf">Como se hizo...</a></p>
+    </section>
+    <section>
         <h3>GRACIAS</h3>
         <h3>POR SU</h3>
         <h3>VISITA</h3>
-    </div>
+    </section>
 </footer>
 </body>
 </html>
