--- a/PRACTICA1/exposiciones/educarte/obras/unidad.html
+++ b/PRACTICA1/exposiciones/educarte/obras/unidad.html
@@ -36,7 +36,7 @@
         </section>
         <section class="section-navigation">
             <a class="white-link" href="../../../index.html">Home</a>
-            <a class="white-link" href="../../../exposiciones/belleza_oculta/belleza_oculta.html">Belleza Oculta</a>
+            <a class="white-link" href="../../../exposiciones/educarte/educarte.html">EducArte</a>
         </section>
     </nav>
 </header>
@@ -45,21 +45,18 @@
     <section class="section-info-obra">
         <img
                 class="img"
-                src="../../../images/exposiciones/belleza_oculta/obras/loba_capitolina.webp"
-                width="550" height="354" alt="Loba capitolina"
+                src="../../../images/exposiciones/educarte/obras/unidad.jpeg"
+                width="600" height="400" alt="Jóvenes Bebiendo"
         >
-        <h1>Loba capitolina</h1>
-        <h3>Por Alberto Toro Gutierrez</h3>
+        <h1>Unidad</h1>
+        <h3>Por Javier García Cobos</h3>
         <p class="obra-description">
-            La Loba Capitolina, Luperca, es una figura clave en la historia de Roma. Según la mitología, una loba
-            encontró a dos gemelos, Rómulo y Remo, a orillas del río Tíber. La criatura, contrariamente a su
-            instinto carnívoro, amamantó y crio a los dos niños que acabarían fundando la ciudad de Roma en la
-            colina del Palatino.
-            Desde los inicios de Roma, la Loba Capitolina fue un poderoso símbolo de la ciudad.
-            Puede que incluso antes de la propia Roma, pues se cree que esta simbología podría ser de
-            origen etrusco. Como la escultura más representativa de Luperca amamantando a Rómulo y Remo
-            conservada en los Museos Capitolinos. De la cual tenemos una pequeña réplica en la Plaza del
-            Campidoglio, en la cima de Roma vigilando lo que han sido capaces de crear sus cachorros.
+            Refugiada, desplazada..., gente que se alimenta cada día. Pero ¿nos hemos parado a pensar cómo se
+            alimentan quienes viven en los campos de refugiados, las personas que llevan años viviendo como
+            desplazados? ¿Cuál es su poder de decisión para alimentarse, quién las alimenta y de dónde vienen
+            los alimentos? Alimentar a cientos de miles de personas en un periodo de emergencia es un reto muy
+            complicado, evitar el impacto negativo en el territorio al que han llegado es imposible...
+            ¿Cuáles son las respuestas que pueden surgir desde la soberanía alimentaria?
         </p>
     </section>
 </main>
