--- a/PRACTICA1/exposiciones/acuarela/acuarela.html
+++ b/PRACTICA1/exposiciones/acuarela/acuarela.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../assets/css/style-header.css">
     <link rel="stylesheet" href="../../assets/css/style-footer.css">
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
+    <link rel="icon" type="image/jpg" href="../../favicon.ico"/>
 </head>
 
 <body>
