--- a/PRACTICA1/altapublico.html
+++ b/PRACTICA1/altapublico.html
@@ -43,7 +43,7 @@
 <main class="page-signup">
     <h1>Formulario de registro</h1>
     <section class="signup-form-section">
-        <form action="https://bahia.ugr.es/~pw20885646/pe1/alta_success.html">
+        <form action="http://bahia.ugr.es/~pw20885646/pe1/alta_success.html">
             <input type="text" placeholder="Nombre.." name="username" required>
             <input type="text" placeholder="Apellidos..." name="username" required>
             <input type="tel" placeholder="Teléfono..." name="phoneNumber" required>
