--- a/PRACTICA1/contacto.html
+++ b/PRACTICA1/contacto.html
@@ -27,6 +27,7 @@
             <button type="submit">Iniciar sesión</button>
         </form>
         <a class="register" href="altapublico.html">Registrarse</a>
+        <a class="register" href="altacomisario.html">Registrar comisario</a>
     </section>
     <nav class="nav-bar">
         <section class="section-expo-types">
@@ -40,23 +41,39 @@
     </nav>
 </header>
 
-<main class="page-signup">
-    <h1>Formulario de registro de comisario</h1>
-    <section class="signup-form-section">
-        <form action="http://bahia.ugr.es/~pw20885646/pe1/alta_success.html">
-            <input type="text" placeholder="Nombre.." name="username" required>
-            <input type="text" placeholder="Apellidos..." name="username" required>
-            <input type="tel" placeholder="Teléfono..." name="phoneNumber" required>
-            <input type="text" placeholder="Usuario..." name="username" required>
-            <input type="password" placeholder="Contraseña..." name="password" required>
-            <input type="password" placeholder="Repita la contraseña..." name="password" required>
-            <label class="birthDate" for="birthDate">Fecha de nacimiento:</label>
-            <input class="birthDate" type="datetime-local" id="birthDate" name="birthDate" required>
-            <button type="submit">Registrarse</button>
-        </form>
+<main class="page-contact">
+    <section class="profile">
+        <section class="presentation">
+            <!--suppress CheckImageSize -->
+            <img class="png-shadow" width="260" height="260" src="images/profile.png" alt="Antonio Jiménez Rodríguez">
+            <h1>Antonio Jiménez Rodríguez</h1>
+            <h3>Junior Software Developer en iEditorial Elearning</h3>
+        </section>
+        <section class="more-info">
+            <p>
+                Esta Web ha sido maquetada y construida por mí, Antonio Jiménez Rodríguez, siguiendo los diseños y
+                directrices dadas en el guión de la primera práctica evaluable de la asignatura <b>Programación Web</b>
+                en el curso 21-22.
+            </p>
+            <p>
+                Puedes contactar conmigo en alguno de los siguientes enlaces:
+            </p>
+            <ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/antonio-jim%C3%A9nez-rodr%C3%ADguez-098aa8205/"
+                       target="_blank">
+                        <img class="png-shadow" alt="LinkedIN" width="30px" src="images/linkedin.svg"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/Antobio17/" target="_blank">
+                        <img class="png-shadow" alt="LinkedIN" width="30px" src="images/github.svg"/>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </section>
 </main>
-
 <footer>
     <section>
         <h4>Contacta</h4>
@@ -65,7 +82,6 @@
         <p>C/ Cuesta de las Monjas N13</p>
     </section>
     <section>
-        <p><a href="contacto.html">Desarrollador: Antonio Jiménez</a></p>
         <p><a href="doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
