--- a/PRACTICA1/exposiciones/acuarela/acuarela.html
+++ b/PRACTICA1/exposiciones/acuarela/acuarela.html
@@ -44,7 +44,7 @@
 <main class="page-expo">
     <section class="expo-img">
         <img
-                class="img"
+                class="img shadow"
                 src="../../images/exposiciones/acuarela/acuarela.jpg"
                 width="400"
                 height="270"
@@ -73,7 +73,7 @@
                 <a href="obras/la_granja.html">
                     <!--suppress CheckImageSize -->
                     <img
-                            class="img"
+                            class="img shadow"
                             src="../../images/exposiciones/acuarela/obras/john-blockley-granja.jpg"
                             alt="El Pósito" width="210" height="160"
                     >
@@ -84,7 +84,7 @@
                 <a href="obras/verja_hierro.html">
                     <!--suppress CheckImageSize -->
                     <img
-                            class="img"
+                            class="img shadow"
                             src="../../images/exposiciones/acuarela/obras/john-blockley-verja.jpg"
                             alt="El Pósito" width="210" height="200"
                     >
@@ -95,7 +95,7 @@
                 <a href="obras/niebla.html">
                     <!--suppress CheckImageSize -->
                     <img
-                            class="img"
+                            class="img shadow"
                             src="../../images/exposiciones/acuarela/obras/niebla-philip-jamison.jpg"
                             alt="El Pósito" width="210" height="190"
                     >
@@ -115,7 +115,7 @@
     </section>
     <section>
         <p><a href="../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
