--- a/PRACTICA1/exposiciones/acuarela/obras/niebla.html
+++ b/PRACTICA1/exposiciones/acuarela/obras/niebla.html
@@ -45,7 +45,7 @@
 <main class="page-obra">
     <section class="section-info-obra">
         <img
-                class="img"
+                class="img shadow"
                 src="../../../images/exposiciones/acuarela/obras/niebla-philip-jamison.jpg"
                 width="550" height="387" alt="Niebla sobre la isla de Lanes"
         >
@@ -71,7 +71,7 @@
     </section>
     <section>
         <p><a href="../../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
