--- a/PRACTICA1/exposiciones/belleza_oculta/belleza_oculta.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/belleza_oculta.html
@@ -44,7 +44,7 @@
 <main class="page-expo">
     <section class="expo-img">
         <img
-                class="img"
+                class="img shadow"
                 src="../../images/exposiciones/belleza_oculta/futura-expo.jpg"
                 width="400"
                 height="270"
@@ -73,7 +73,7 @@
                 <a href="obras/loba_capitolina.html">
                     <!--suppress CheckImageSize -->
                     <img
-                            class="img"
+                            class="img shadow"
                             src="../../images/exposiciones/belleza_oculta/obras/loba_capitolina.webp"
                             alt="El Pósito" width="230" height="180"
                     >
@@ -84,7 +84,7 @@
                 <a href="obras/victoria_alada.html">
                     <!--suppress CheckImageSize -->
                     <img
-                            class="img"
+                            class="img shadow"
                             src="../../images/exposiciones/belleza_oculta/obras/victoria_alada.webp"
                             alt="El Pósito" width="230" height="190"
                     >
@@ -95,7 +95,7 @@
                 <a href="obras/formas_unicas.html">
                     <!--suppress CheckImageSize -->
                     <img
-                            class="img"
+                            class="img shadow"
                             src="../../images/exposiciones/belleza_oculta/obras/formas_unicas.jpg"
                             alt="El Pósito" width="210" height="250"
                     >
@@ -106,7 +106,7 @@
                 <a href="obras/balloon_dog.html">
                     <!--suppress CheckImageSize -->
                     <img
-                            class="img"
+                            class="img shadow"
                             src="../../images/exposiciones/belleza_oculta/obras/balloon_dog.jpg"
                             alt="El Pósito" width="250" height="190"
                     >
@@ -126,7 +126,7 @@
     </section>
     <section>
         <p><a href="../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
