--- a/PRACTICA1/exposiciones/belleza_oculta/obras/formas_unicas.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/obras/formas_unicas.html
@@ -45,7 +45,7 @@
 <main class="page-obra">
     <section class="section-info-obra">
         <img
-                class="img"
+                class="img shadow"
                 src="../../../images/exposiciones/belleza_oculta/obras/formas_unicas.jpg"
                 width="460" height="500" alt="Formas Únicas de Continuidad"
         >
@@ -72,7 +72,7 @@
     </section>
     <section>
         <p><a href="../../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
