--- a/PRACTICA1/exposiciones/educarte/educarte.html
+++ b/PRACTICA1/exposiciones/educarte/educarte.html
@@ -44,7 +44,7 @@
 <main class="page-expo">
     <section class="expo-img">
         <img
-                class="img"
+                class="img shadow"
                 src="../../images/exposiciones/educarte/educarte.jpg"
                 width="400"
                 height="270"
@@ -71,7 +71,7 @@
                 <a href="obras/jovenes_bebiendo.html">
                     <!--suppress CheckImageSize -->
                     <img
-                            class="img"
+                            class="img shadow"
                             src="../../images/exposiciones/educarte/obras/jovenes_bebiendo.jpg"
                             alt="El Pósito" width="290" height="180"
                     >
@@ -82,7 +82,7 @@
                 <a href="obras/unidad.html">
                     <!--suppress CheckImageSize -->
                     <img
-                            class="img"
+                            class="img shadow"
                             src="../../images/exposiciones/educarte/obras/unidad.jpeg"
                             alt="El Pósito" width="290" height="180"
                     >
@@ -102,7 +102,7 @@
     </section>
     <section>
         <p><a href="../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
