--- a/PRACTICA1/altapublico.html
+++ b/PRACTICA1/altapublico.html
@@ -66,7 +66,7 @@
     </section>
     <section>
         <p><a href="contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
