--- a/PRACTICA1/exposiciones/acuarela/obras/verja_hierro.html
+++ b/PRACTICA1/exposiciones/acuarela/obras/verja_hierro.html
@@ -45,7 +45,7 @@
 <main class="page-obra">
     <section class="section-info-obra">
             <img
-                    class="img"
+                    class="img shadow"
                     src="../../../images/exposiciones/acuarela/obras/john-blockley-verja.jpg"
                     width="550" height="490" alt="Verja de hierro"
             >
@@ -76,7 +76,7 @@
     </section>
     <section>
         <p><a href="../../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
