--- a/PRACTICA1/exposiciones/belleza_oculta/obras/loba_capitolina.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/obras/loba_capitolina.html
@@ -45,7 +45,7 @@
 <main class="page-obra">
     <section class="section-info-obra">
         <img
-                class="img"
+                class="img shadow"
                 src="../../../images/exposiciones/belleza_oculta/obras/loba_capitolina.webp"
                 width="550" height="354" alt="Loba capitolina"
         >
@@ -74,7 +74,7 @@
     </section>
     <section>
         <p><a href="../../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
