--- a/PRACTICA1/exposiciones/belleza_oculta/obras/victoria_alada.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/obras/victoria_alada.html
@@ -45,7 +45,7 @@
 <main class="page-obra">
     <section class="section-info-obra">
         <img
-                class="img"
+                class="img shadow"
                 src="../../../images/exposiciones/belleza_oculta/obras/victoria_alada.webp"
                 width="550" height="470" alt="Victoria alada de Samotracia"
         >
@@ -73,7 +73,7 @@
     </section>
     <section>
         <p><a href="../../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
