--- a/PRACTICA1/exposiciones/educarte/obras/jovenes_bebiendo.html
+++ b/PRACTICA1/exposiciones/educarte/obras/jovenes_bebiendo.html
@@ -45,7 +45,7 @@
 <main class="page-obra">
     <section class="section-info-obra">
         <img
-                class="img"
+                class="img shadow"
                 src="../../../images/exposiciones/educarte/obras/jovenes_bebiendo.jpg"
                 width="550" height="314" alt="Jóvenes Bebiendo"
         >
@@ -68,7 +68,7 @@
     </section>
     <section>
         <p><a href="../../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
