--- a/PRACTICA1/exposiciones/educarte/obras/unidad.html
+++ b/PRACTICA1/exposiciones/educarte/obras/unidad.html
@@ -45,7 +45,7 @@
 <main class="page-obra">
     <section class="section-info-obra">
         <img
-                class="img"
+                class="img shadow"
                 src="../../../images/exposiciones/educarte/obras/unidad.jpeg"
                 width="600" height="400" alt="Jóvenes Bebiendo"
         >
@@ -71,7 +71,7 @@
     </section>
     <section>
         <p><a href="../../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../../doc/documentacion.pdf">Como se hizo...</a></p>
+        <p><a href="../../../doc/documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
