Trabajando en la página de documentación.

--- a/PRACTICA1/documentacion.html
+++ b/PRACTICA1/documentacion.html
@@ -41,37 +41,11 @@
     </nav>
 </header>
 
-<main class="page-contact">
-    <section class="profile">
-        <section class="presentation">
-            <!--suppress CheckImageSize -->
-            <img class="png-shadow" width="260" height="260" src="images/profile.png" alt="Antonio Jiménez Rodríguez">
-            <h1>Antonio Jiménez Rodríguez</h1>
-            <h3>Junior Software Developer en iEditorial Elearning</h3>
-        </section>
-        <section class="more-info">
-            <p>
-                Esta Web ha sido maquetada y construida por mí, Antonio Jiménez Rodríguez, siguiendo los diseños y
-                directrices dadas en el guión de la primera práctica evaluable de la asignatura <b>Programación Web</b>
-                en el curso 21-22.
-            </p>
-            <p>
-                Puedes contactar conmigo en alguno de los siguientes enlaces:
-            </p>
-            <ul>
-                <li>
-                    <a href="https://www.linkedin.com/in/antonio-jim%C3%A9nez-rodr%C3%ADguez-098aa8205/"
-                       target="_blank">
-                        <img class="png-shadow" alt="LinkedIN" width="30px" src="images/linkedin.svg"/>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/Antobio17/" target="_blank">
-                        <img class="png-shadow" alt="LinkedIN" width="30px" src="images/github.svg"/>
-                    </a>
-                </li>
-            </ul>
-        </section>
+<main class="page-doc">
+    <section class="documentation">
+        <h1>Documentación</h1>
+        <iframe src="doc/documentacion.pdf" width="70%" height="600px"></iframe>
+        <p class="doc-access">Accede desde <a href="doc/documentacion.pdf" target="_blank">aquí</a>.</p>
     </section>
 </main>
 <footer>
@@ -82,7 +56,7 @@
         <p>C/ Cuesta de las Monjas N13</p>
     </section>
     <section>
-        <p><a href="documentacion.html">Como se hizo...</a></p>
+        <p><a href="contacto.html">Desarrollador: Antonio Jiménez</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
