--- a/PRACTICA1/exposiciones/belleza_oculta/obras/victoria_alada.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/obras/victoria_alada.html
@@ -73,7 +73,7 @@
     </section>
     <section>
         <p><a href="../../../contacto.html">Desarrollador: Antonio Jiménez</a></p>
-        <p><a href="../../../doc/documentacion.html">Como se hizo...</a></p>
+        <p><a href="../../../documentacion.html">Como se hizo...</a></p>
     </section>
     <section>
         <h3>GRACIAS</h3>
