--- a/PRACTICA1/categorias/fotografia.html
+++ b/PRACTICA1/categorias/fotografia.html
@@ -41,7 +41,7 @@
 </header>
 
 <main class="page-category-expo">
-    <h1>Exposiciones de Escultura</h1>
+    <h1>Exposiciones de Fotografía</h1>
     <section class="container-expos">
         <article class="expo">
             <a href="../exposiciones/educarte/educarte.html">
