--- a/PRACTICA1/categorias/pintura.html
+++ b/PRACTICA1/categorias/pintura.html
@@ -41,7 +41,7 @@
 </header>
 
 <main class="page-category-expo">
-    <h1>Exposiciones de Escultura</h1>
+    <h1>Exposiciones de Pintura</h1>
     <section class="container-expos">
         <article class="expo">
             <a href="../exposiciones/acuarela/acuarela.html">
