--- a/PRACTICA1/categorias/pintura.html
+++ b/PRACTICA1/categorias/pintura.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="../assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -46,7 +46,7 @@
         <article class="expo">
             <a href="../exposiciones/acuarela/acuarela.html">
                 <!--suppress CheckImageSize -->
-                <img src="../images/exposiciones/acuarela/acuarela.jpg" width="200" height="110"
+                <img src="../assets/images/exposiciones/acuarela/acuarela.jpg" width="200" height="110"
                      alt="Acuarela">
             </a>
             <a href="../exposiciones/acuarela/acuarela.html">
