--- a/PRACTICA1/contacto.html
+++ b/PRACTICA1/contacto.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -45,7 +45,7 @@
     <section class="profile">
         <section class="presentation">
             <!--suppress CheckImageSize -->
-            <img class="png-shadow" width="260" height="260" src="images/profile.png" alt="Antonio Jiménez Rodríguez">
+            <img class="png-shadow" width="260" height="260" src="assets/images/profile.png" alt="Antonio Jiménez Rodríguez">
             <h1>Antonio Jiménez Rodríguez</h1>
             <h3>Junior Software Developer en iEditorial Elearning</h3>
         </section>
@@ -62,12 +62,12 @@
                 <li>
                     <a href="https://www.linkedin.com/in/antonio-jim%C3%A9nez-rodr%C3%ADguez-098aa8205/"
                        target="_blank">
-                        <img class="png-shadow" alt="LinkedIN" width="30px" src="images/linkedin.svg"/>
+                        <img class="png-shadow" alt="LinkedIN" width="30px" src="assets/images/linkedin.svg"/>
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/Antobio17/" target="_blank">
-                        <img class="png-shadow" alt="LinkedIN" width="30px" src="images/github.svg"/>
+                        <img class="png-shadow" alt="LinkedIN" width="30px" src="assets/images/github.svg"/>
                     </a>
                 </li>
             </ul>
