--- a/PRACTICA1/exposiciones/acuarela/acuarela.html
+++ b/PRACTICA1/exposiciones/acuarela/acuarela.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="../../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="../../assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -45,7 +45,7 @@
     <section class="expo-img">
         <img
                 class="img shadow"
-                src="../../images/exposiciones/acuarela/acuarela.jpg"
+                src="../../assets/images/exposiciones/acuarela/acuarela.jpg"
                 width="400"
                 height="270"
                 alt="Acuarela"
@@ -74,7 +74,7 @@
                     <!--suppress CheckImageSize -->
                     <img
                             class="img shadow"
-                            src="../../images/exposiciones/acuarela/obras/john-blockley-granja.jpg"
+                            src="../../assets/images/exposiciones/acuarela/obras/john-blockley-granja.jpg"
                             alt="El Pósito" width="210" height="160"
                     >
                     <h3>La Granja</h3>
@@ -85,7 +85,7 @@
                     <!--suppress CheckImageSize -->
                     <img
                             class="img shadow"
-                            src="../../images/exposiciones/acuarela/obras/john-blockley-verja.jpg"
+                            src="../../assets/images/exposiciones/acuarela/obras/john-blockley-verja.jpg"
                             alt="El Pósito" width="210" height="200"
                     >
                     <h3>Verja de hierro</h3>
@@ -96,7 +96,7 @@
                     <!--suppress CheckImageSize -->
                     <img
                             class="img shadow"
-                            src="../../images/exposiciones/acuarela/obras/niebla-philip-jamison.jpg"
+                            src="../../assets/images/exposiciones/acuarela/obras/niebla-philip-jamison.jpg"
                             alt="El Pósito" width="210" height="190"
                     >
                     <h3>Niebla sobre la isla de Lanes</h3>
