--- a/PRACTICA1/exposiciones/educarte/educarte.html
+++ b/PRACTICA1/exposiciones/educarte/educarte.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="../../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="../../assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -45,7 +45,7 @@
     <section class="expo-img">
         <img
                 class="img shadow"
-                src="../../images/exposiciones/educarte/educarte.jpg"
+                src="../../assets/images/exposiciones/educarte/educarte.jpg"
                 width="400"
                 height="270"
                 alt="Belleza Oculta"
@@ -72,7 +72,7 @@
                     <!--suppress CheckImageSize -->
                     <img
                             class="img shadow"
-                            src="../../images/exposiciones/educarte/obras/jovenes_bebiendo.jpg"
+                            src="../../assets/images/exposiciones/educarte/obras/jovenes_bebiendo.jpg"
                             alt="El Pósito" width="290" height="180"
                     >
                     <h3>Jóvenes bebiendo</h3>
@@ -83,7 +83,7 @@
                     <!--suppress CheckImageSize -->
                     <img
                             class="img shadow"
-                            src="../../images/exposiciones/educarte/obras/unidad.jpeg"
+                            src="../../assets/images/exposiciones/educarte/obras/unidad.jpeg"
                             alt="El Pósito" width="290" height="180"
                     >
                     <h3>Unidad</h3>
