--- a/PRACTICA1/exposiciones/educarte/obras/unidad.html
+++ b/PRACTICA1/exposiciones/educarte/obras/unidad.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="../../../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="../../../assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -46,7 +46,7 @@
     <section class="section-info-obra">
         <img
                 class="img shadow"
-                src="../../../images/exposiciones/educarte/obras/unidad.jpeg"
+                src="../../../assets/images/exposiciones/educarte/obras/unidad.jpeg"
                 width="600" height="400" alt="Jóvenes Bebiendo"
         >
         <h1>Unidad</h1>
