--- a/PRACTICA1/documentacion.html
+++ b/PRACTICA1/documentacion.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
