--- a/PRACTICA1/exposiciones/acuarela/obras/la_granja.html
+++ b/PRACTICA1/exposiciones/acuarela/obras/la_granja.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="../../../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="../../../assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -46,7 +46,7 @@
     <section class="section-info-obra">
         <img
                 class="img shadow"
-                src="../../../images/exposiciones/acuarela/obras/john-blockley-granja.jpg"
+                src="../../../assets/images/exposiciones/acuarela/obras/john-blockley-granja.jpg"
                 width="550" height="314" alt="La granja"
         >
         <h1>La granja</h1>
