--- a/PRACTICA1/exposiciones/belleza_oculta/belleza_oculta.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/belleza_oculta.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="../../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="../../assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -45,7 +45,7 @@
     <section class="expo-img">
         <img
                 class="img shadow"
-                src="../../images/exposiciones/belleza_oculta/futura-expo.jpg"
+                src="../../assets/images/exposiciones/belleza_oculta/futura-expo.jpg"
                 width="400"
                 height="270"
                 alt="Belleza Oculta"
@@ -74,7 +74,7 @@
                     <!--suppress CheckImageSize -->
                     <img
                             class="img shadow"
-                            src="../../images/exposiciones/belleza_oculta/obras/loba_capitolina.webp"
+                            src="../../assets/images/exposiciones/belleza_oculta/obras/loba_capitolina.webp"
                             alt="El Pósito" width="230" height="180"
                     >
                     <h3>Loba capitolina</h3>
@@ -85,7 +85,7 @@
                     <!--suppress CheckImageSize -->
                     <img
                             class="img shadow"
-                            src="../../images/exposiciones/belleza_oculta/obras/victoria_alada.webp"
+                            src="../../assets/images/exposiciones/belleza_oculta/obras/victoria_alada.webp"
                             alt="El Pósito" width="230" height="190"
                     >
                     <h3>Victoria alada de Samotracia</h3>
@@ -96,7 +96,7 @@
                     <!--suppress CheckImageSize -->
                     <img
                             class="img shadow"
-                            src="../../images/exposiciones/belleza_oculta/obras/formas_unicas.jpg"
+                            src="../../assets/images/exposiciones/belleza_oculta/obras/formas_unicas.jpg"
                             alt="El Pósito" width="210" height="250"
                     >
                     <h3>Formas Únicas de Continuidad</h3>
@@ -107,7 +107,7 @@
                     <!--suppress CheckImageSize -->
                     <img
                             class="img shadow"
-                            src="../../images/exposiciones/belleza_oculta/obras/balloon_dog.jpg"
+                            src="../../assets/images/exposiciones/belleza_oculta/obras/balloon_dog.jpg"
                             alt="El Pósito" width="250" height="190"
                     >
                     <h3>Balloon Dog</h3>
