--- a/PRACTICA1/exposiciones/belleza_oculta/obras/formas_unicas.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/obras/formas_unicas.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="../../../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="../../../assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -46,7 +46,7 @@
     <section class="section-info-obra">
         <img
                 class="img shadow"
-                src="../../../images/exposiciones/belleza_oculta/obras/formas_unicas.jpg"
+                src="../../../assets/images/exposiciones/belleza_oculta/obras/formas_unicas.jpg"
                 width="460" height="500" alt="Formas Únicas de Continuidad"
         >
         <h1>Formas Únicas de Continuidad</h1>
