--- a/PRACTICA1/exposiciones/belleza_oculta/obras/victoria_alada.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/obras/victoria_alada.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="../../../images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="../../../assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -46,7 +46,7 @@
     <section class="section-info-obra">
         <img
                 class="img shadow"
-                src="../../../images/exposiciones/belleza_oculta/obras/victoria_alada.webp"
+                src="../../../assets/images/exposiciones/belleza_oculta/obras/victoria_alada.webp"
                 width="550" height="470" alt="Victoria alada de Samotracia"
         >
         <h1>Victoria alada de Samotracia</h1>
