--- a/PRACTICA1/index.html
+++ b/PRACTICA1/index.html
@@ -15,7 +15,7 @@
 <header>
     <section class="header-brand">
         <!--suppress CheckImageSize -->
-        <img src="images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
+        <img src="assets/images/el_posito_logo.png" alt="El Pósito" width="90" height="90">
         <h1>El Pósito</h1>
     </section>
     <section class="header-users">
@@ -74,7 +74,7 @@
             <article class="expo">
                 <a href="exposiciones/educarte/educarte.html">
                     <!--suppress CheckImageSize -->
-                    <img src="images/exposiciones/educarte/educarte.jpg" width="200" height="110" alt="EduCarte">
+                    <img src="assets/images/exposiciones/educarte/educarte.jpg" width="200" height="110" alt="EduCarte">
                 </a>
                 <a href="exposiciones/educarte/educarte.html">
                     <h3>EducArte</h3>
@@ -85,7 +85,7 @@
             <article class="expo">
                 <a href="exposiciones/belleza_oculta/belleza_oculta.html">
                     <!--suppress CheckImageSize -->
-                    <img src="images/exposiciones/belleza_oculta/futura-expo.jpg" width="200" height="110"
+                    <img src="assets/images/exposiciones/belleza_oculta/futura-expo.jpg" width="200" height="110"
                          alt="Belleza Oculta">
                 </a>
                 <a href="exposiciones/belleza_oculta/belleza_oculta.html">
@@ -97,7 +97,7 @@
             <article class="expo">
                 <a href="exposiciones/acuarela/acuarela.html">
                     <!--suppress CheckImageSize -->
-                    <img src="images/exposiciones/acuarela/acuarela.jpg" width="200" height="110"
+                    <img src="assets/images/exposiciones/acuarela/acuarela.jpg" width="200" height="110"
                          alt="Acuarela">
                 </a>
                 <a href="exposiciones/acuarela/acuarela.html">
