Añadiendo sección de comentarios a página de exposición.

--- a/PRACTICA1/exposiciones/acuarela/acuarela.html
+++ b/PRACTICA1/exposiciones/acuarela/acuarela.html
@@ -104,6 +104,23 @@
             </article>
         </fieldset>
     </section>
+    <section class="comments">
+        <h2>Comentarios</h2>
+        <fieldset class="comment">
+            <legend>Antonio Jiménez Rodríguez</legend>
+            Muy buena exposición, eché en falta un poco más de obras por parte del autor. Sin embargo creo que
+            no hay que desperdiciar esta oportunidad que nos brinda El Pósito.
+        </fieldset>
+        <fieldset class="comment">
+            <legend>Jose Manuel Cáceres</legend>
+            Mis expectativas no era muy altas a la hora de visitar esta exposición y creo que fue un acierto el
+            darle una oportunidad
+        </fieldset>
+        <form class="commentsForm" action="#">
+            <textarea name="comment" rows="4" placeholder="Deja aquí tu comentario..."></textarea>
+            <button type="submit" disabled>Comentar</button>
+        </form>
+    </section>
 </main>
 
 <footer>
