--- a/PRACTICA1/exposiciones/acuarela/acuarela.html
+++ b/PRACTICA1/exposiciones/acuarela/acuarela.html
@@ -54,7 +54,7 @@
     <section class="expo-info">
         <h1>Acuarela</h1>
         <h3>Mario Gámiz Vargas</h3>
-        <p>Disponible desde el 13 de Septiembre de 2022</p>
+        <p>Disponible desde el 13 de Septiembre de 2021</p>
         <h4>Sala 22E</h4>
         <p class="expo-info-description">
             La acuarela es «pintura sobre papel o cartón con colores diluidos en agua».
@@ -106,15 +106,21 @@
     </section>
     <section class="comments">
         <h2>Comentarios</h2>
-        <fieldset class="comment">
+        <fieldset class="comment-container">
             <legend>Antonio Jiménez Rodríguez</legend>
-            Muy buena exposición, eché en falta un poco más de obras por parte del autor. Sin embargo creo que
-            no hay que desperdiciar esta oportunidad que nos brinda El Pósito.
+            <p class="comment">
+                Muy buena exposición, eché en falta un poco más de obras por parte del autor. Sin embargo creo que
+                no hay que desperdiciar esta oportunidad que nos brinda El Pósito.
+            </p>
+            <p class="comment-date">11:20:34 17/09/2021</p>
         </fieldset>
-        <fieldset class="comment">
+        <fieldset class="comment-container">
             <legend>Jose Manuel Cáceres</legend>
+            <p class="comment">
             Mis expectativas no era muy altas a la hora de visitar esta exposición y creo que fue un acierto el
             darle una oportunidad
+            </p>
+            <p class="comment-date">21:00:11 18/09/2021</p>
         </fieldset>
         <form class="commentsForm" action="#">
             <textarea name="comment" rows="4" placeholder="Deja aquí tu comentario..."></textarea>
