--- a/PRACTICA1/exposiciones/belleza_oculta/belleza_oculta.html
+++ b/PRACTICA1/exposiciones/belleza_oculta/belleza_oculta.html
@@ -115,6 +115,14 @@
             </article>
         </fieldset>
     </section>
+    <section class="comments">
+        <h2>Comentarios</h2>
+        <p>No se ha encontrado ningún comentario...</p>
+        <form class="commentsForm" action="#">
+            <textarea name="comment" rows="4" placeholder="Deja aquí tu comentario..."></textarea>
+            <button type="submit" disabled>Comentar</button>
+        </form>
+    </section>
 </main>
 
 <footer>
