--- a/PRACTICA1/exposiciones/educarte/educarte.html
+++ b/PRACTICA1/exposiciones/educarte/educarte.html
@@ -91,6 +91,21 @@
             </article>
         </fieldset>
     </section>
+    <section class="comments">
+        <h2>Comentarios</h2>
+        <fieldset class="comment-container">
+            <legend>Rubén Sanchez Ortega</legend>
+            <p class="comment">
+                Muy buena exposición he venido con mi hijo y aunque él no ha salido muy convencido,
+                yo creo que es una muy buena experiencia y te hace reflexionar.
+            </p>
+            <p class="comment-date">15:22:54 17/04/2022</p>
+        </fieldset>
+        <form class="commentsForm" action="#">
+            <textarea name="comment" rows="4" placeholder="Deja aquí tu comentario..."></textarea>
+            <button type="submit" disabled>Comentar</button>
+        </form>
+    </section>
 </main>
 
 <footer>
