--- a/PRACTICA1/documentacion.html
+++ b/PRACTICA1/documentacion.html
@@ -44,8 +44,8 @@
 <main class="page-doc">
     <section class="documentation">
         <h1>Documentación</h1>
-        <iframe src="doc/documentacion.pdf" width="70%" height="600px"></iframe>
-        <p class="doc-access">Accede desde <a href="doc/documentacion.pdf" target="_blank">aquí</a>.</p>
+        <iframe src="doc/como_se_hizo.pdf" width="70%" height="600px"></iframe>
+        <p class="doc-access">Accede desde <a href="doc/como_se_hizo.pdf" target="_blank">aquí</a>.</p>
     </section>
 </main>
 <footer>
